--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -24,8 +24,8 @@
 		<ul class = "nav navbar-nav navbar-left">
 		    <a class="navbar-brand" href="#">Inventory</a>
 		   <li class="nav-item active"><a class = "nav-link" href='/'><i class = "fa fa-home"></i>&nbsp;Home</a></li>
-		   <li><a href='/services'>Service</a></li>
-		   <li><a href='/about'>About</a></li>
+		   <li><a href='./service.jsp'>Service</a></li>
+		   <li><a href='./aboutUS.jsp'>About</a></li>
 		   <li><a href='/post'>Blog</a></li>
 		</ul>
 	      <!-- Authentication Links -->
