--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,11 +7,33 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><!--font awsome cdn -->
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <title>Super Inventory</title>
-
+	<link href = "" rel = "stylesheet">
     <!-- Styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+    	body {
+	background: grey;
+	font-family: sans-serif;
+}
+
+#wrapper {
+	min-width: 900px;
+	width: 80%;
+	margin: auto;
+	background: white;
+	height: 700px;
+}
+.jumbotron { min-width: 700px; 
+				width : 70%;
+				margin :auto;
+		}
+
+    </style>
 </head>
 <body>
+
+	<div id = "wrapper">
+	
 <!--Loader  -->
 	 <div class="loadingDiv" style="display:none;position:fixed;top:0px;right:0px;width:100%;height:100%;background-color:#666;background-image:url('images/loading.gif'); background-repeat:no-repeat;background-position:center;z-index:10000000;  opacity: 0.4;">
                     <div>
@@ -145,7 +167,6 @@
                     <form class="form-horizontal" method="POST" id = "register_form" action="../registration">
 						<div class="form-group">
                             <label for="name" class="col-md-4 control-label">Name</label>
-
                             <div class="col-md-6">
                                 <input id="name" type="text" class="form-control" name="name" required autofocus>
                                     <span class="help-block">
@@ -222,7 +243,7 @@
 		</div>
 	</div>
 </div>
-
+</div><!-- end of wrapper -->
 </body>
 </html>
 
